manifests/06-deploy-keycloak/keycloak/keycloak-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-pgsql
  namespace: mcp-test
  labels:
    app: keycloak-pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-pgsql
  template:
    metadata:
      labels:
        app: keycloak-pgsql
    spec:
      containers:
        - name: pgsql
          image: registry.redhat.io/rhel9/postgresql-16:latest
          ports:
            - containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-pgsql
  namespace: mcp-test
  labels:
    app: keycloak-pgsql
spec:
  selector:
    app: keycloak-pgsql
  ports:
    - port: 5432
      targetPort: 5432
