manifests/06-deploy-keycloak/keycloak/keycloak-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
